# flight_delay_prediction

./: .env  .env.ingressprod  .gitignore  Dockerfile.client  Dockerfile.mlflow  Dockerfile.mlserver  Dockerfile.multi_build  Dockerfile.server  Makefile.txt  README.md  docker-compose.gcpprod.yaml  docker-compose.ingressprod.yaml  docker-compose.yaml  nginx-ingress-vouch.conf.template  nginx-ingress.conf.template  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
client_app/: .env  app.py  requirements.txt
client_app/styles/: main.css
mlserver/: Makefile  requirements.in  requirements.txt
notebooks/: .env  Modeling_with_mlflow.ipynb  Modeling_with_mlflow_z.ipynb  Validating_model.ipynb  flight_delay_prediction_EDA.ipynb  flight_delay_prediction_EDA_z.ipynb  modeling-z.ipynb  requirements.txt
requirements/: all.requirements.txt  local.in  local.txt  testing.requirements.txt
scripts/: .env  adv_data.yml  data.yml  data_extraction.py  data_preparation.py  dev-setup.sh  promote_model_to_prod.py  register_model_at_staging.py  tune_random_forest.py  tune_random_forest_with_kmeans.py
server_app/: .env  app.py  requirements.txt
src/flight_delay/: train_utils.py
src/flight_delay/helpers/: file_loaders.py  utils.py
src/flight_delay/mlflow/: registry.py  tracking.py
src/flight_delay/pipeline/: train_evaluate_register.py
tests/: how-to.md
tests/load/: load_test_siege_flask.sh  load_test_siege_mlserver.sh  payload_flask.json  payload_mlserver.json
tests/test_data/: conftest.py  test_make_datasets.py  test_prep_datasets.py
